--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,14 +24,19 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
+  primary:    #FFF,
+  secondary:  #FF9600,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  white:      #fff
 );
 
+$tabs-ios-tab-text-color-active: #fff;
 
+$tabs-ios-tab-icon-color: #fff;
+
+$tabs-ios-tab-icon-size: 60px;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
