Added profile page.

--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -5,6 +5,10 @@
     margin-bottom: 60px;
 }
 
+ion-icon.tab-button-icon.icon.icon-ios.ion-ios-search {
+  border: none;
+}
+
 ion-icon.tab-button-icon.icon.icon-ios.ion-ios-search-outline {
   border: none;
 }
