--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  white:      #fff
+  white:      #fff,
+  green:      #0cd80c
 );
 
 $tabs-ios-tab-text-color-active: #fff;
