--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,4 +1,14 @@
 .profile-page {
   background: url('../../img/oj-background.png');
 
+  .profile-icon {
+    margin-top: 4px;
+    margin-bottom: 1px;
+    min-width: 108px;
+    height: 108px;
+    font-size: 100px;
+    color: #fff;
+    border: 4px solid white;
+    border-radius: 50%;
+  }
 }
