--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,6 +33,8 @@ $colors: (
   green:      #0cd80c
 );
 
+$primary: #FF9600;
+
 $tabs-ios-tab-text-color-active: #fff;
 
 $tabs-ios-tab-icon-color: #fff;
