--- a/src/pages/profile/profile-edit.scss
+++ b/src/pages/profile/profile-edit.scss
@@ -1,3 +1,40 @@
 .profile-edit-page {
   background: url('../../img/oj-background.png');
+
+    button {
+      background: none;
+    }
+
+  .profile-icon {
+    margin-top: 4px;
+    margin-bottom: 1px;
+    min-width: 108px;
+    height: 108px;
+    font-size: 100px;
+    color: #fff;
+    border: 4px solid white;
+    border-radius: 50%;
+  }
+
+
+  .item-ios {
+    background-color: rgba(255, 150, 0, 0.0);
+    color: #fff;
+
+    ion-input {
+      font-size: 25px;
+    }
+  }
+
+  .list-ios > .item-block:first-child {
+    border-top: 0px;
+  }
+
+  .list-ios > .item-block:last-child, .list-ios > .item-wrapper:last-child .item-block {
+      border-bottom: 0px;
+  }
+
+  ion-note {
+    color: #fff;
+  }
 }
