--- a/src/pages/profile/profile-info.scss
+++ b/src/pages/profile/profile-info.scss
@@ -1,6 +1,17 @@
 .profile-info-page {
   background: url('../../img/oj-background.png');
 
+  .profile-icon {
+    margin-top: 4px;
+    margin-bottom: 1px;
+    min-width: 108px;
+    height: 108px;
+    font-size: 100px;
+    color: #fff;
+    border: 4px solid white;
+    border-radius: 50%;
+  }
+
   h1{
     font-size: 4.6rem;
   }
@@ -21,4 +32,5 @@
   ion-note {
     color: #fff;
   }
+
 }
