--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,13 +2,54 @@
     background: url('../../img/oj-home.png');
     background-size: cover;
     background-color: #FF9600;
-}
 
-.searchbar-ios {
-  padding: 0 8px;
-  min-height: 44px;
-  border-top: 0.55px solid transparent;
-  border-bottom: none;
-  background: none;
-  margin-top: 15px;
+    .scroll-content {
+      padding-top: 0px !important;
+    }
+
+    .searchbar-ios {
+      padding: 0 8px;
+      min-height: 44px;
+      border-top: 0.55px solid transparent;
+      border-bottom: none;
+      background: none;
+      margin-top: 15px;
+    }
+
+    .profile-image {
+      margin-top: 4px;
+      margin-bottom: 1px;
+      min-width: 30px;
+      font-size: 100px;
+      color: #fff;
+      border: 1px solid black;
+      border-radius: 50%;
+    }
+
+    .profile-icon {
+      margin-top: 4px;
+      margin-bottom: 1px;
+      min-width: 32px;
+      padding-left: 5px;
+      height: 32px;
+      font-size: 32px;
+      color: black;
+      border: 1px solid black;
+      border-radius: 50%;
+      margin-left: 3px;
+  }
+
+    ion-list {
+      ion-item {
+        background-color: rgba(255, 255, 255, 0.5);
+
+        .item-inner {
+          border-bottom: 0px !important;
+        }
+      }
+
+      ion-item:last-child {
+        border-bottom: 0px !important;
+      }
+    }
 }
