--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -22,7 +22,7 @@
       min-width: 30px;
       font-size: 100px;
       color: #fff;
-      border: 1px solid black;
+      border: 1px solid rgba(0,0,0,0.6);
       border-radius: 50%;
     }
 
