--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,8 +1,11 @@
 .tabs-ios .tabbar {
     justify-content: center;
     border-top: none;
-    background: none;
     margin-bottom: 60px;
+
+    background-color: #ff8b00;
+    padding-top: 5px;
+
 }
 
 ion-icon.tab-button-icon.icon.icon-ios.ion-ios-search {
