--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,13 +33,15 @@ $colors: (
   green:      #0cd80c
 );
 
-$primary: #FF9600;
+$primary: #ff8b00;
 
 $tabs-ios-tab-text-color-active: #fff;
 
 $tabs-ios-tab-icon-color: #fff;
 
 $tabs-ios-tab-icon-size: 60px;
+
+$infinite-scroll-loading-color: #fff;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
